# esp32-flight-tracker

./: .gitignore  CMakeLists.txt  DEVELOP.md  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
docs/specs/: 2026-07-08-00-colors-polish-altitudes.md  2026-07-08-01-automatic-map-outlines.md  2026-07-09-00-water-outline-streaming.md
main/: CMakeLists.txt  aircraft_type_client.cpp  aircraft_type_client.hpp  airport_client.cpp  airport_client.hpp  board_config.hpp  config_store.cpp  config_store.hpp  connection_status.cpp  connection_status.hpp  connection_status_icon.cpp  connection_status_icon.hpp  contact.cpp  contact.hpp  display.cpp  display.hpp  geo.cpp  geo.hpp  http_fetch.cpp  http_fetch.hpp  idf_component.yml  json_util.hpp  main.cpp  map_client.cpp  map_client.hpp  map_data.h  mock_contacts.hpp  opensky_client.cpp  opensky_client.hpp  plane_color.hpp  plane_table_view.cpp  plane_table_view.hpp  provisioning.cpp  provisioning.hpp  radar_view.cpp  radar_view.hpp  secrets_config.example.hpp  settings_view.cpp  settings_view.hpp  touch.cpp  (+5 more)
tools/: LICENSE  make_map.py
