idf_component_register(
    SRCS
        "main.cpp"
        "display.cpp"
        "touch.cpp"
        "ui.cpp"
        "radar_view.cpp"
        "geo.cpp"
        "wifi_station.cpp"
        "opensky_client.cpp"
    INCLUDE_DIRS "."
    PRIV_REQUIRES
        esp_driver_ledc
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        esp_http_client
        mbedtls
        esp_timer
)
