idf_component_register(
    SRCS
        "main.cpp"
        "contact.cpp"
        "display.cpp"
        "touch.cpp"
        "ui.cpp"
        "radar_view.cpp"
        "plane_table_view.cpp"
        "geo.cpp"
        "wifi_station.cpp"
        "http_fetch.cpp"
        "opensky_client.cpp"
        "aircraft_type_client.cpp"
        "airport_client.cpp"
        "map_client.cpp"
        "config_store.cpp"
        "provisioning.cpp"
        "connection_status.cpp"
        "connection_status_icon.cpp"
        "settings_view.cpp"
    INCLUDE_DIRS "."
    PRIV_REQUIRES
        esp_driver_ledc
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        esp_http_client
        esp_http_server
        lwip
        mbedtls
        esp_timer
)
